# RustyNesting

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RUST-REWRITE-PLAN.md  package.json  reviewer-fixes.md  reviewer.md
.github/workflows/: release.yml
crates/geometry/: Cargo.toml
crates/geometry/src/: circular_nfp.rs  clearance.rs  clipper.rs  dxf_export.rs  dxf_import.rs  hull_polygon.rs  inner_nfp.rs  lib.rs  nfp.rs  obstacle_nfp.rs  point.rs  polygon.rs  simplify.rs  simplify_polygon.rs
crates/geometry/tests/: dxf_fixtures.rs
crates/nesting/: Cargo.toml
crates/nesting/examples/: bench.rs  compare_supernesting.rs  hat_test.rs
crates/nesting/src/: benchmark_log.rs  cache.rs  cache_key.rs  consolidation.rs  dispatch.rs  ga.rs  lib.rs  placement.rs  repack.rs
docs/: PORT_STATUS.md
frontend/: app.css  app.js  deepnest.js  index.html  style.css  svgparser.js
frontend/ui/: index.d.ts  index.js  index.js.map
frontend/ui/components/: navigation.d.ts  navigation.js  navigation.js.map  nest-view.d.ts  nest-view.js  nest-view.js.map  nesting-console.d.ts  nesting-console.js  nesting-console.js.map  parts-view.d.ts  parts-view.js  parts-view.js.map  sheet-dialog.d.ts  sheet-dialog.js  sheet-dialog.js.map
frontend/ui/services/: config.service.d.ts  config.service.js  (+13 more)
frontend/util/: verifyCircularHoleNfp.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  main.rs
tests/fixtures/: FLAT-struck.dxf  FLAT.dxf  hat-monotile.dxf  nest.dxf
(+12 files in other folders)
