[package]
name = "deepnest-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-dialog = "2"
geometry = { path = "../crates/geometry" }
nesting = { path = "../crates/nesting" }
dxf = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
